--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "commit": "gitmoji -c",
     "build": "gatsby build",
     "develop": "gatsby develop",
+    "lint": "eslint src",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
@@ -22,8 +23,22 @@
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-prettier-standard": "^3.0.1",
+    "eslint-config-standard": "^16.0.1",
+    "eslint-config-standard-jsx": "^10.0.0",
+    "eslint-config-standard-react": "^11.0.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-standard": "^4.0.2",
     "gitmoji-cli": "^3.2.12",
-    "prettier": "2.1.2"
+    "prettier": "2.1.2",
+    "prettier-config-standard": "^1.0.1"
   },
   "keywords": [
     "portfolio"
