--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@momocow/cow.moe",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "",
   "version": "0.1.0",
   "license": "UNLICENSED",
   "scripts": {
@@ -17,10 +17,18 @@
   },
   "dependencies": {
     "gatsby": "^2.24.91",
+    "gatsby-plugin-advanced-sitemap": "^1.5.6",
+    "gatsby-plugin-manifest": "^2.5.1",
+    "gatsby-plugin-offline": "^3.3.1",
+    "gatsby-plugin-react-i18next": "0.0.27",
+    "gatsby-plugin-robots-txt": "^1.5.3",
     "gatsby-source-filesystem": "^2.4.0",
     "gatsby-transformer-yaml": "^2.4.15",
+    "i18next": "^19.8.3",
+    "lodash": "^4.17.20",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-i18next": "^11.7.3"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
