--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
   },
   "dependencies": {
     "gatsby": "^2.24.91",
+    "gatsby-image": "^2.4.21",
     "gatsby-plugin-advanced-sitemap": "^1.5.6",
     "gatsby-plugin-manifest": "^2.5.1",
     "gatsby-plugin-offline": "^3.3.1",
     "gatsby-plugin-react-i18next": "0.0.27",
     "gatsby-plugin-robots-txt": "^1.5.3",
+    "gatsby-plugin-sharp": "^2.7.1",
     "gatsby-source-filesystem": "^2.4.0",
+    "gatsby-transformer-sharp": "^2.5.21",
     "gatsby-transformer-yaml": "^2.4.15",
     "i18next": "^19.8.3",
     "lodash": "^4.17.20",
