--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "fontsource-roboto": "^3.0.3",
     "gatsby": "^2.24.91",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-advanced-sitemap": "^1.5.6",
     "gatsby-plugin-manifest": "^2.5.1",
+    "gatsby-plugin-next-seo": "^1.6.1",
     "gatsby-plugin-offline": "^3.3.1",
+    "gatsby-plugin-react-helmet-async": "^1.1.0",
     "gatsby-plugin-react-i18next": "0.0.27",
     "gatsby-plugin-robots-txt": "^1.5.3",
     "gatsby-plugin-sharp": "^2.7.1",
@@ -29,8 +33,9 @@
     "gatsby-transformer-yaml": "^2.4.15",
     "i18next": "^19.8.3",
     "lodash": "^4.17.20",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet-async": "^1.0.7",
     "react-i18next": "^11.7.3"
   },
   "devDependencies": {
