--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
-    "fontsource-roboto": "^3.0.3",
+    "clsx": "^1.1.1",
+    "darkmode-js": "^1.5.7",
     "gatsby": "^2.24.91",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-advanced-sitemap": "^1.5.6",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.5.1",
     "gatsby-plugin-next-seo": "^1.6.1",
     "gatsby-plugin-offline": "^3.3.1",
@@ -29,14 +31,17 @@
     "gatsby-plugin-robots-txt": "^1.5.3",
     "gatsby-plugin-sharp": "^2.7.1",
     "gatsby-source-filesystem": "^2.4.0",
+    "gatsby-theme-material-ui": "^1.0.13",
     "gatsby-transformer-sharp": "^2.5.21",
     "gatsby-transformer-yaml": "^2.4.15",
+    "hamburger-react": "^2.3.0",
     "i18next": "^19.8.3",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet-async": "^1.0.7",
-    "react-i18next": "^11.7.3"
+    "react-i18next": "^11.7.3",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
