--- a/package.json
+++ b/package.json
@@ -20,27 +20,28 @@
     "clsx": "^1.1.1",
     "darkmode-js": "^1.5.7",
     "gatsby": "^2.24.91",
-    "gatsby-image": "^2.4.21",
+    "gatsby-image": "^2.8.0",
     "gatsby-plugin-advanced-sitemap": "^1.5.6",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-manifest": "^2.5.1",
     "gatsby-plugin-next-seo": "^1.6.1",
-    "gatsby-plugin-offline": "^3.3.1",
     "gatsby-plugin-react-helmet-async": "^1.1.0",
     "gatsby-plugin-react-i18next": "0.0.27",
     "gatsby-plugin-robots-txt": "^1.5.3",
     "gatsby-plugin-sharp": "^2.7.1",
     "gatsby-source-filesystem": "^2.4.0",
-    "gatsby-theme-material-ui": "^1.0.13",
     "gatsby-transformer-sharp": "^2.5.21",
     "gatsby-transformer-yaml": "^2.4.15",
     "hamburger-react": "^2.3.0",
     "i18next": "^19.8.3",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
+    "react-card-flip": "^1.0.11",
     "react-dom": "^17.0.1",
+    "react-external-link": "^1.2.0",
     "react-helmet-async": "^1.0.7",
     "react-i18next": "^11.7.3",
+    "react-text-transition": "^1.1.2",
+    "react-tiny-fab": "^4.0.2",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
@@ -59,6 +60,8 @@
     "eslint-plugin-standard": "^4.0.2",
     "gitmoji-cli": "^3.2.12",
     "husky": "^4.3.5",
+    "i18next-fs-backend": "^1.0.7",
+    "pkg-up": "^3.1.0",
     "prettier": "2.1.2",
     "prettier-config-standard": "^1.0.1"
   },
@@ -75,9 +78,9 @@
   },
   "homepage": "https://github.com/momocow/momocow.github.io#readme",
   "husky": {
-      "hooks": {
-          "pre-commit": "npm run format",
-          "pre-push": "npm run lint"
-      }
+    "hooks": {
+      "pre-commit": "npm run format",
+      "pre-push": "npm run lint"
+    }
   }
 }
