--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "npm run format",
-      "pre-push": "npm run lint"
+      "//pre-push": "npm run lint"
     }
   }
 }
