--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^17.0.1",
     "react-external-link": "^1.2.0",
     "react-helmet-async": "^1.0.7",
+    "react-html-comment": "^2.0.4",
     "react-i18next": "^11.7.3",
     "react-text-transition": "^1.1.2",
     "react-tiny-fab": "^4.0.2",
